<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	tools:context=".ui.auth.RegisterActivity">

	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_register"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/tilUsername"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tilUsername"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		app:layout_constraintBottom_toTopOf="@+id/tilPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvTitle">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/etUsername"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_username"
			android:inputType="text" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tilPassword"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		app:layout_constraintBottom_toTopOf="@+id/cbHasSecureCard"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tilUsername"
		app:passwordToggleEnabled="true">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/etPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_password"
			android:inputType="textPassword" />
	</com.google.android.material.textfield.TextInputLayout>

	<CheckBox
		android:id="@+id/cbHasSecureCard"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="I have a secure NFC card"
		app:layout_constraintBottom_toTopOf="@+id/btnRegister"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

	<Button
		android:id="@+id/btnRegister"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/btn_register"
		app:layout_constraintBottom_toTopOf="@+id/tvLogin"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cbHasSecureCard" />

	<TextView
		android:id="@+id/tvLogin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/text_have_account"
		android:textSize="16sp"
		app:layout_constraintBottom_toTopOf="@+id/btnLogin"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

	<Button
		android:id="@+id/btnLogin"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>